# Physical-AI-Humanoid-Robotics

./: .gitignore  sample_book_content.md  test_connection.py  test_selection_query.py
backend/: .gitignore  README.md  check_cohere_models.py  check_qdrant_result.py  clear_and_reingest.py  corrected_setup_db.sql  pyproject.toml  requirements.txt  setup_database.py  setup_db.sql  test_ingestion.py  test_query.py
backend/.specify/memory/: constitution.md  qwen-context.md
backend/history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
backend/history/prompts/rag-chatbot-backend/: 001-rag-chatbot-backend-specification.spec.prompt.md  002-rag-chatbot-backend-planning.plan.prompt.md  003-rag-chatbot-backend-tasks.tasks.prompt.md
backend/specs/: rag-chatbot-backend.spec.md
backend/specs/rag-chatbot-backend/: README.md  data-model.md  plan.md  quickstart.md  research.md  tasks.md
backend/specs/rag-chatbot-backend/checklists/: requirements.md
backend/specs/rag-chatbot-backend/contracts/: api-contract.yaml
backend/src/: config.py  main.py
backend/src/models/: chat_session_model.py  chunk_model.py  document_model.py  query_log_model.py
backend/src/routers/: ingest_router.py  query_router.py  schemas.py
backend/src/services/: chunker_service.py  content_validator.py  embedder_service.py  ingestion_service.py  interfaces.py  neon_metadata_service.py  qdrant_service.py  query_service.py
backend/src/utils/: logging_config.py
frontend/: HomePage.jsx
physical-ai-robotics-book/: docusaurus.config.js  docusaurus.development.config.js  (+3 more)
(+255 files in other folders)
